fix header alignment

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -2,6 +2,15 @@
   display: none;
 }
 
+.about-list li {
+  padding-top: 8px;
+}
+
+.main-header h1 {
+  margin-top: 0px;
+  padding: 10px;
+}
+
 .head-nav {
   list-style: none;
   position: relative;
